Login, register, listing and adding devices

--- a/src/app/devices/devices.component.html
+++ b/src/app/devices/devices.component.html
@@ -1,3 +1,10 @@
+<h1>Your Devices</h1>
+
 <p>
-  devices works!
+  <a [routerLink]="['/device/create']">Add New Device</a> | 
+  <a href (click)="logout()">Logoff</a>
 </p>
+
+<span *ngFor="let device of devices">
+  <p>{{device.name}} - {{device.type}} (<b>{{device._id}}</b>)</p>
+</span>
