--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,14 @@
+<h1>Sign In</h1>
+<form>
+  <label for="username">Username</label>
+  <input type="text" name="username" [(ngModel)]="input.username" /><br>
+
+  <label for="password">Password</label>
+  <input type="password" name="password" [(ngModel)]="input.password"><br>
+
+  <button type="button" (click)="login()">Login</button>
+</form>
+
 <p>
-  login works!
+  <a [routerLink]="['/register']">Register</a>
 </p>
