--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,14 +1,32 @@
-<h1>Sign In</h1>
-<form>
-  <label for="username">Username</label>
-  <input type="text" name="username" [(ngModel)]="input.username" /><br>
+<form [formGroup]="loginForm" (ngSubmit)="login(loginForm.value)">
+  <div class="form-container">
+    <div class="row columns">
+      <h1>Entrar</h1>
+      <p>
+        <a [routerLink]="['/register']">Criar Conta</a>
+      </p>
 
-  <label for="password">Password</label>
-  <input type="password" name="password" [(ngModel)]="input.password"><br>
+      <label for="username">
+        Nome de Usuário
+        <input type="text" formControlName="username" id="username" name="username">
+      </label>
 
-  <button type="button" (click)="login()">Login</button>
+      <div class="errors" *ngIf="!loginForm.controls['username'].valid && loginForm.controls['username'].touched">
+        <div class="alert" *ngIf="loginForm.controls['username'].errors.required">
+          Este campo é requerido.
+        </div>
+      </div>
+
+      <label for="password">
+        Senha
+        <input type="password" formControlName="password" id="password">
+      </label>
+      <div class="errors" *ngIf="!loginForm.controls['password'].valid && loginForm.controls['password'].touched">
+        <div class="alert" *ngIf="loginForm.controls['password'].errors.required">Este campo é requerido.</div>
+        <div class="alert" *ngIf="loginForm.controls['password'].errors.minlength">Este campo precisa ter pelo menos 8 caracteres.</div>
+      </div>
+
+      <input type="submit" class="button expanded" value="Enviar" [disabled]="!loginForm.valid">
+    </div>
+  </div>
 </form>
-
-<p>
-  <a [routerLink]="['/register']">Register</a>
-</p>
