--- a/src/app/devices/devices.component.html
+++ b/src/app/devices/devices.component.html
@@ -10,16 +10,8 @@
     </a>
   </p>
   <div class="grid-x grid-margin-x">
-    <div class="cell small-4" *ngFor="let device of devices">
-      <div class="card" style="width: 100%;">
-        <div class="card-divider">
-          <h4>{{device.name}}</h4>
-        </div>
-        <div class="card-section">
-          <p>Tipo: {{device.type}}</p>
-          <p>Criado em: {{device.created_at | date:'dd/MM/yyyy HH:mm:ss'}}</p>
-        </div>
-      </div>
+    <div class="cell small-4" *ngFor="let d of devices">
+      <single-device [device]="d"></single-device>
     </div>
   </div>
 </div>
